// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> should render a default image 1`] = `
<img
  alt="Some alt text"
  className="ddORmD"
  src="A source string"
/>
`;

exports[`<Image /> should render a full image 1`] = `
<img
  alt="Some alt text"
  className="ddORmD"
  size="full"
  src="A source string"
/>
`;

exports[`<Image /> should render a large image 1`] = `
<img
  alt="Some alt text"
  className="ddORmD"
  size="large"
  src="A source string"
/>
`;

exports[`<Image /> should render a medium image 1`] = `
<img
  alt="Some alt text"
  className="ddORmD"
  size="medium"
  src="A source string"
/>
`;

exports[`<Image /> should render a small image 1`] = `
<img
  alt="Some alt text"
  className="ddORmD"
  size="small"
  src="A source string"
/>
`;

exports[`<Image /> should render a thumbnail image 1`] = `
<img
  alt="Some alt text"
  className="ddORmD"
  size="thumb"
  src="A source string"
/>
`;

exports[`<Image /> should render a xlarge image 1`] = `
<img
  alt="Some alt text"
  className="ddORmD"
  size="xlarge"
  src="A source string"
/>
`;

exports[`<Image /> should render a xsmall image 1`] = `
<img
  alt="Some alt text"
  className="ddORmD"
  size="xsmall"
  src="A source string"
/>
`;

exports[`<Image /> should render a xxsmall image 1`] = `
<img
  alt="Some alt text"
  className="ddORmD"
  size="xxsmall"
  src="A source string"
/>
`;
